# Vietnam-Legal-Chatbot

./: .gitignore  pyproject.toml  readme.md
scripts/: build_index.py  export_chunks.py  export_documents.py  export_embeddings.py  inspect_dataset.py  inspect_documents.py  inspect_export.py
src/vn_legal_rag/: config.py
src/vn_legal_rag.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/vn_legal_rag/chunking/: __init__.py  chunker.py  clause_splitter.py  clausesplitter.py  legal_splitter.py  legalsplitter.py  length_splitter.py  lengthsplitter.py  point_splitter.py  pointsplitter.py  regex.py  splitter.py
src/vn_legal_rag/embedding/: __init__.py  model.py
src/vn_legal_rag/ingestion/: __init__.py  loader.py  processor.py
src/vn_legal_rag/models/: __init__.py  chunk.py  document.py
src/vn_legal_rag/preprocessing/: __init__.py  cleaner.py  document_filter.py  metadata.py
src/vn_legal_rag/retrieval/: __init__.py  faiss_index.py  index_builder.py
src/vn_legal_rag/utils/: __init__.py  io.py
src/vn_legal_rag/vnl_chatbot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_chunk_statistic.py  test_chunker.py  test_clause_splitter.py  test_document.py  test_embedding.py  test_faiss.py  test_faiss_index.py  test_length_splitter.py  test_loader.py  test_point_splitter.py  test_processor.py  test_recursive_splitter.py  test_regex.py  test_splitter.py
